--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 decorator==4.4.2
 Django==2.2.17
+django-rest-swagger==2.2.0
 djangorestframework==3.12.2
 idna==2.10
 ipython==7.9.0
@@ -13,6 +14,7 @@ itypes==1.2.0
 jedi==0.17.2
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+openapi-codec==1.3.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -24,6 +26,7 @@ Pygments==2.7.2
 pytz==2020.4
 PyYAML==5.3.1
 requests==2.25.0
+simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
 traitlets==4.3.3
